# Omnigine

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
include/Omni/: Assets.h  Atlas.h  Main.h  Omni.h  Scene.h
include/Omnigine/: Atlas.h  Audio.h  Omni.h  Tick.h  omni.h  omni_assets.h  omni_main.h
src/: main.cpp  omni_assets.h  omni_main.h  omni_scene.h  omni_tick.h  omnigine.h  omnigine_main.h  omnigine_scene.h
src/omnigine/: omni.h  omni_assets.h  omni_atlas.h  omni_info.h  omni_input.h  omni_main.h  omni_render.h  omni_scene.h  omni_sdl.h  omni_tick.h  omni_window.h
